force-app/main/default/objects/Interview_Stage__c/Interview_Stage__c.object-meta.xml
<CustomObject>
    <label>Interview Stage</label>
    <nameField>
        <label>Interview Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interview Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>