force-app/main/default/objects/Interview_Stage__c/fields/Job_Position__c.field-meta.xml
<CustomField>
    <fullName>Job_Position__c</fullName>
    <label>Job Position</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Interview Stages</relationshipLabel>
    <relationshipName>Interview_Stages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>