force-app/main/default/objects/Interview_Stage__c/fields/Passing_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Passing_Threshold__c</fullName>
    <label>Passing Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>