force-app/main/default/objects/Interview_Stage__c/fields/Stage_Weight__c.field-meta.xml
<CustomField>
    <fullName>Stage_Weight__c</fullName>
    <label>Stage Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>