force-app/main/default/objects/Interview_Stage__c/fields/Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Count__c</fullName>
    <label>Team Member Count</label>
    <summaryForeignKey
  >Interview_Stage_Team_Member__c.Interview_Stage__c</summaryForeignKey>
    <summaryOperation>COUNT</summaryOperation>
    <type>Summary</type>
</CustomField>