force-app/main/default/objects/Interview_Stage__c/validationRules/Active_Stage_Must_Have_Team_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>Active_Stage_Must_Have_Team_Member</fullName>
    <active>true</active>
    <description
  >An Interview Stage cannot be activated without at least one team member.</description>
    <errorConditionFormula
  >Is_Active__c &amp;&amp; Team_Member_Count__c = 0</errorConditionFormula>
    <errorMessage
  >An Interview Stage must have at least one team member before it can be activated.</errorMessage>
</ValidationRule>