force-app/main/default/objects/Interview_Stage__c/validationRules/Passing_Threshold_Must_Be_Le_Max_Score.validationRule-meta.xml
<ValidationRule>
    <fullName>Passing_Threshold_Must_Be_Le_Max_Score</fullName>
    <active>true</active>
    <description>Passing Threshold must be less than or equal to Max Score.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Passing_Threshold__c)),
    NOT(ISBLANK(Max_Score__c)),
    Passing_Threshold__c &gt; Max_Score__c
)</errorConditionFormula>
    <errorMessage>Passing Threshold cannot exceed Max Score.</errorMessage>
</ValidationRule>